Telegram messages, config, README

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css">
+
+		<style>
+			.slide-background {
+				background-color: #000 !important;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
