--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 			<div class="slides">
 				<section>&nbsp;</section>
 				<section data-cscape-check="check_folder" data-background-video="videos/5.mp4" data-background-size="contain" data-autoplay></section>
-				<section data-cscape-check="check_file" data-background-video="videos/9.mp4" data-background-size="contain" data-autoplay></section>
+				<section>
+					<section data-cscape-check="check_file1" data-background-video="videos/9.mp4" data-background-size="contain" data-autoplay></section>
+					<section data-cscape-check="check_file2" data-background-video="videos/8.mp4" data-background-size="contain" data-autoplay></section>
+					<section data-cscape-check="check_file3" data-background-video="videos/3.mp4" data-background-size="contain" data-autoplay></section>
+				</section>
+				<section data-background-video="videos/4.mp4" data-background-size="contain" data-autoplay></section>
 			</div>
 		</div>
 
